--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -27,7 +27,7 @@
         .task-type-two-cols {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 24px;  
+            gap: 24px;
             margin-bottom: 12px;
             margin-top: 8px;
         }
@@ -147,14 +147,14 @@
         {name: '061-066', duration: 1},
         {name: '067-072', duration: 1},
         {name: '073-078', duration: 1},
-        {name: 'PE 061-080', duration: 1},
         {name: '079-084', duration: 1},
         {name: '085-090', duration: 1},
-        {name: '091-097', duration: 1},
+        {name: '091-096', duration: 1},
         {name: 'PE 081-100', duration: 1},
-        {name: '098-104', duration: 1},
-        {name: '105-111', duration: 1},
-        {name: '112-118', duration: 1},
+        {name: '097-102', duration: 1},
+        {name: '103-108', duration: 1},
+        {name: '109-114', duration: 1},
+        {name: '115-118', duration: 1},
       ],
       rounds: ['视频',
         {label: '笔记', duration: 1},
@@ -388,7 +388,7 @@
         {label: '看笔记', duration: 3},
         {label: '强化1000题', duration: 3},
       ],
-      restDays: '2025-12-26,2025-12-27,2025-12-28,2025-12-29,2025-12-30,2026-01-06,2026-01-10,2026-01-11'
+      restDays: '2025-12-26,2025-12-27,2025-12-28,2025-12-29,2025-12-30,2026-01-06,2026-01-10,2026-01-11,2026-01-19,2026-01-20,2026-01-21,2026-01-22,2026-01-23,2026-01-24,2026-01-25,2026-02-12,2026-02-13,2026-02-14,2026-02-15,2026-02-16,2026-02-17,2026-02-18,2026-02-19,2026-02-20,2026-02-21,2026-02-22,2026-02-23'
     },
 
     // MO
